chore: bypass proxy

--- a/backend/.env
+++ b/backend/.env
@@ -2,6 +2,6 @@ NODE_PORT=8089
 NODE_ENV=dev
 PROXY_URL=localhost
 PROXY_PORT=8866
-USE_PROXY=true
+USE_PROXY=false
 API_BASE=35.207.169.147
 API_PATH=/results
